--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,10 +1,16 @@
 // Home Content
-
+.wrapper{
+    max-width: 900px;
+    width:100%;
+    margin: 0 auto;
+  
+}
 .home {
 
   .intro {
 
-      .headerpic{max-width:100%;
+      .headerpic{
+        max-width:100%;
       }
     h2 {
       padding: 15px;
@@ -70,8 +76,8 @@
     display: flex;
     justify-content: center;
     @media @phone{
-      padding-top: 15px;
-      margin: 20px 2.5%;
+      padding: 15px;
+      margin: 0;
      
     }
 @media @phone{
@@ -81,6 +87,8 @@
   margin-top: 0px;
   padding-left: 0px;
   padding-right: 0px;
+  margin-left: 0px;
+
 }
     .walk-text {
       width: 50%;
